# AI-agent

./: .gitignore  LICENSE  README.md  app.py  app1.py  app2.py  client.py  client1.py  mcp_servers.json  requirements.txt
backend/: .env  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  RENDER_DEPLOYMENT.md  SECURITY.md  app.py  config.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  secrets-to-remove.txt  setup.bat  setup.sh  test_db_performance.py
backend/app/: app.py  credentials.json.example  quickstart.py
backend/app/agents/: __init__.py  background_email_agent.py  email_agent.py  event_schedular_agent.py  notification_agent.py  supervisor_agent.py
backend/app/db/: connection.py
backend/app/db/crud/: __init__.py  events.py  reminders.py
backend/app/services/: __init__.py  agentic_supportive_tool.py  llm_models.py  support_services.py
backend/app/tools/: __init__.py  tools.py
backend/src/: __init__.py  credentials.json  gmail_auth.py
backend/src/agents/: __init__.py  background_email_agent.py  email_agent.py  event_schedular_agent.py  notification_agent.py  supervisor_agent.py
backend/src/db/: __init__.py  connection.py
backend/src/db/crud/: __init__.py  events.py  reminders.py
backend/src/db/models/: __init__.py  events.py  models.py
backend/src/services/: __init__.py  agentic_supportive_tool.py  llm_models.py  prompts.py  support_services.py
backend/src/tools/: tools.py
chroma_db/: chroma.sqlite3
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
reference_tests/: app2.py  (+2 more)
(+17 files in other folders)
